crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_builtin_pure_function_type_args.rs
fn main() {
    //@ assert seq_len::<i32>([1i32, 2i32]) == Nat::Succ(Nat::Succ(Nat::Zero));
}
